# cofun

./: atom.xml  index.html  rss.xml
blog/: .gitignore  cofun-blog.cabal  deploy.sh  index.md  shell.nix  site.hs
blog/css/: custom.css
blog/drafts/: cofree_and_comonad_transformers.md  coproducts_for_free_and_products_for_cofree.md  monad_transformers.md  pairing_effects_networking.md
blog/posts/: cofree_and_comonad_transformers.md  comonads.md  coproducts_for_free_and_products_for_cofree.md  free_and_cofree.md  monad_transformers_and_comonad_transformers.md  pairing_and_io.md  pairing_over_the_network.md
blog/templates/: default.html  post-list.html  post.html
code/: .gitignore  README.md
code/adder-class/: adder-class.cabal
code/adder-components/: adder-components.cabal  default.nix  shell.nix
code/adder-coproduct/: shell.nix  (+2 more)
code/cofun-coproduct/: cofun-coproduct.cabal  default.nix  shell.nix
code/cofun-coproduct/src/Util/: Coproduct.hs
code/cofun-coproduct/src/Util/Coproduct/: List1.hs  List2.hs  Old.hs
css/: custom.css
drafts/: cofree_and_comonad_transformers.html  comonads.html  coproducts_for_free_and_products_for_cofree.html  monad_transformers.html  pairing_and_io.html  pairing_effects_networking.html  pairing_over_the_network.html
posts/: cofree_and_comonad_transformers.html  comonads.html  coproducts_for_free_and_products_for_cofree.html  free_and_cofree.html  monad_transformers_and_comonad_transformers.html  pairing_and_io.html  pairing_effects_networking.html  pairing_over_the_network.html
slides/: .gitignore  build.sh  slides.tex
(+98 files in other folders)
