name:                cofun-coproduct
version:             0.1.0.0
homepage:            https://dlaing.org/cofun
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Util.Coproduct
  other-modules:       Util.Coproduct.List2
  build-depends:         base           >= 4.8 && < 4.9
                       , binary         >= 0.7 && < 0.8
                       , cofun-pairing  >= 0.1 && < 0.2
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
